03_ドメイン設定

--- a/myproject/nginx/nginx.conf
+++ b/myproject/nginx/nginx.conf
@@ -27,7 +27,7 @@ http {
 
     server {
         listen 80;
-        server_name 18.183.156.104;
+        server_name satoh2-train.training-lab-2024.com;
         client_max_body_size 10g;
 
         location /static {
